{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 96,
  "lineage": "8446f5f4-5cdf-517f-b72e-95dfbfe3d27f",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "snet_1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:640262166032:instance/i-0b42027429481fb75",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b42027429481fb75",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "salman_nv_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-016e66315cc5b381e",
            "private_dns": "ip-10-0-1-134.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.134",
            "public_ip": "54.210.222.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f8a54b8c46afa604",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a4a6843c3196e3d6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff480f36e034b499",
            "tags": {
              "Name": "Server-1"
            },
            "tags_all": {
              "Name": "Server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a4a6843c3196e3d6"
            ]
          },
          "dependencies": [
            "module.nw.aws_subnet.pub_snet",
            "module.nw.aws_vpc.aws_vpc",
            "module.sg.aws_security_group.sg"
          ]
        },
        {
          "index_key": "snet_2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:640262166032:instance/i-030fd88de4928e523",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-030fd88de4928e523",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "salman_nv_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-013afcaacbf99ca1d",
            "private_dns": "ip-10-0-2-231.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.231",
            "public_ip": "54.90.110.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0188d685388aa2f08",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a4a6843c3196e3d6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a026ecea583c783f",
            "tags": {
              "Name": "server-2"
            },
            "tags_all": {
              "Name": "server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a4a6843c3196e3d6"
            ]
          },
          "dependencies": [
            "module.nw.aws_subnet.pub_snet",
            "module.nw.aws_vpc.aws_vpc",
            "module.sg.aws_security_group.sg"
          ]
        },
        {
          "index_key": "snet_3",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:640262166032:instance/i-0f05cda3fe478c2e3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f05cda3fe478c2e3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "salman_nv_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-058a4330d65af7eac",
            "private_dns": "ip-10-0-3-15.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.15",
            "public_ip": "35.153.203.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-052cbb26bf271fbf3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a4a6843c3196e3d6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-074c3f393503b6e93",
            "tags": {
              "Name": "server-3"
            },
            "tags_all": {
              "Name": "server-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a4a6843c3196e3d6"
            ]
          },
          "dependencies": [
            "module.nw.aws_subnet.pub_snet",
            "module.nw.aws_vpc.aws_vpc",
            "module.sg.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640262166032:internet-gateway/igw-0521f6f369b218f8c",
            "id": "igw-0521f6f369b218f8c",
            "owner_id": "640262166032",
            "tags": {
              "Name": "default_vpc"
            },
            "tags_all": {
              "Name": "default_vpc"
            },
            "vpc_id": "vpc-052a90908ff5ad078"
          },
          "dependencies": [
            "module.nw.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640262166032:route-table/rtb-0e950355b5c91c979",
            "id": "rtb-0e950355b5c91c979",
            "owner_id": "640262166032",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0521f6f369b218f8c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default_vpc"
            },
            "tags_all": {
              "Name": "default_vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-052a90908ff5ad078"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nw.aws_internet_gateway.aws_igw",
            "module.nw.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aws_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub_snet_1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0715c46760f528c03",
            "route_table_id": "rtb-0e950355b5c91c979",
            "subnet_id": "subnet-0ff480f36e034b499"
          },
          "dependencies": [
            "module.nw.aws_internet_gateway.aws_igw",
            "module.nw.aws_route_table.aws_rt",
            "module.nw.aws_subnet.pub_snet",
            "module.nw.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "pub_snet_2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f79a6bd86a01b88a",
            "route_table_id": "rtb-0e950355b5c91c979",
            "subnet_id": "subnet-0a026ecea583c783f"
          },
          "dependencies": [
            "module.nw.aws_internet_gateway.aws_igw",
            "module.nw.aws_route_table.aws_rt",
            "module.nw.aws_subnet.pub_snet",
            "module.nw.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "pub_snet_3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a23a9f89a5701a7",
            "route_table_id": "rtb-0e950355b5c91c979",
            "subnet_id": "subnet-074c3f393503b6e93"
          },
          "dependencies": [
            "module.nw.aws_internet_gateway.aws_igw",
            "module.nw.aws_route_table.aws_rt",
            "module.nw.aws_subnet.pub_snet",
            "module.nw.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub_snet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640262166032:subnet/subnet-0ff480f36e034b499",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff480f36e034b499",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "640262166032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default_vpc"
            },
            "tags_all": {
              "Name": "default_vpc"
            },
            "vpc_id": "vpc-052a90908ff5ad078"
          },
          "dependencies": [
            "module.nw.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "pub_snet_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640262166032:subnet/subnet-0a026ecea583c783f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a026ecea583c783f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "640262166032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default_vpc"
            },
            "tags_all": {
              "Name": "default_vpc"
            },
            "vpc_id": "vpc-052a90908ff5ad078"
          },
          "dependencies": [
            "module.nw.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "pub_snet_3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640262166032:subnet/subnet-074c3f393503b6e93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074c3f393503b6e93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "640262166032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default_vpc"
            },
            "tags_all": {
              "Name": "default_vpc"
            },
            "vpc_id": "vpc-052a90908ff5ad078"
          },
          "dependencies": [
            "module.nw.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640262166032:subnet/subnet-0ee8738988bf04586",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee8738988bf04586",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "640262166032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default_vpc"
            },
            "tags_all": {
              "Name": "default_vpc"
            },
            "vpc_id": "vpc-052a90908ff5ad078"
          },
          "dependencies": [
            "module.nw.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640262166032:vpc/vpc-052a90908ff5ad078",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b5cd26a1fc313036",
            "default_route_table_id": "rtb-08c44c0655e2b58ea",
            "default_security_group_id": "sg-0ddf4e5378f118a7b",
            "dhcp_options_id": "dopt-0a36e5c811318c98a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-052a90908ff5ad078",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08c44c0655e2b58ea",
            "owner_id": "640262166032",
            "tags": {
              "Name": "default_vpc"
            },
            "tags_all": {
              "Name": "default_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640262166032:security-group/sg-0a4a6843c3196e3d6",
            "description": "all incoming",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a4a6843c3196e3d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2",
            "name_prefix": "",
            "owner_id": "640262166032",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default_vpc"
            },
            "tags_all": {
              "Name": "default_vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-052a90908ff5ad078"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nw.aws_vpc.aws_vpc"
          ]
        }
      ]
    }
  ]
}